--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -14,18 +14,19 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #476664;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  font-family: FontAwesome;
   color: white;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #fb61fb;
 }
 
 @keyframes App-logo-spin {
