--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ffc6c6 !important;
 }
 
 code {
